Added Gradient Background

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,14 @@
 h1, h2, h3 {
     font-family: 'Reem Kufi', sans-serif;
 }
+
+body, .navbar {
+  //Gradient Provided by @_ighosh at uiGradients.com
+  background: #FC354C; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #FC354C , #0ABFBC); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #FC354C , #0ABFBC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar {
+  border: none;
+}
