--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@ h1, h2, h3 {
     font-family: 'Reem Kufi', sans-serif;
 }
 
-body, .navbar {
+.navbar, .home-callout {
   //Gradient Provided by @_ighosh at uiGradients.com
   background: #FC354C; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #FC354C , #0ABFBC); /* Chrome 10-25, Safari 5.1-6 */
@@ -30,4 +30,11 @@ body, .navbar {
 
 .navbar {
   border: none;
+}
+
+.home-callout {
+  color:white;
+  margin-top: -20px;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
