Added bootstrap js and updated nav styles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,15 @@ h1, h2, h3, .navbar {
     opacity: 0.75;
   }
 }
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+      background-color: #0ABFBC;
+  }
+}
 
 //Home Page Styles
 .home-callout {
